- align client logos and fix layout

--- a/_sass/imports/modules/_clients.scss
+++ b/_sass/imports/modules/_clients.scss
@@ -19,12 +19,9 @@
 
 		@include at-breakpoint($large-width)
 		{
-			&:nth-child(2n)
-			{
-				@include remove-omega($large-cols);
-			}
+			@include remove-nth-omega(2n, $context:6);
 
-			@include span-columns(1, 3);
+			@include span-columns(2, 6);
 			@include nth-omega(3n);
 		}
 	}
